@@ -1,6 +1,5 @@
 
 TODO:
 - use wdata or mod_storage for writing/reading world data
-- add localization support
 - add Spanish translation
 - check cached skins after mods loaded
